refine upload notebooks

--- a/notebooks/JarkusGrids2EE.ipynb
+++ b/notebooks/JarkusGrids2EE.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#%matplotlib inline\n",
     "\n",
+    "import os\n",
     "import subprocess\n",
     "import itertools\n",
     "import numpy as np\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,104 +46,25 @@
     "    items = ncfile.split('/catalog.html/')\n",
     "    filename = items[1].split('/')[-1]\n",
     "    url = url_base + '/' + filename\n",
+    "    if filename == 'catalog.nc':\n",
+    "        continue\n",
     "    urls.append(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB134_1110.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB133_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB133_1110.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB132_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB132_1110.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB131_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB131_1110.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB130_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB130_1110.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB129_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB129_1110.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB128_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB127_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB126_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB125_1514.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB125_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB124_1716.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB124_1514.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB124_1312.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB123_1918.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB123_1716.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB123_1514.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB122_2322.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB122_2120.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB122_1918.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB122_1716.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB121_3130.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB121_2928.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB121_2726.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB121_2524.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB121_2322.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB121_2120.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB121_1918.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB120_3534.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB120_3332.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB120_3130.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB120_2928.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB119_3736.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB119_3534.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB119_3332.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB118_3938.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB118_3736.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB118_3534.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB117_4140.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB117_3938.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB117_3736.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB116_4342.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB116_4140.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB116_3938.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB115_4544.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB115_4342.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB115_4140.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB114_4948.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB114_4544.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB114_4342.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB113_4948.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB113_4746.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB113_4544.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB112_4948.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB112_4746.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB111_5150.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/jarkusKB111_4948.nc',\n",
-       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/jarkus/grids/catalog.nc']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "urls[:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 3/3 [01:18<00:00, 26.19s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grids = []\n",
     "for url in tqdm(urls[:]):\n",
@@ -168,20 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "count = len(list(itertools.chain.from_iterable([g['times'] for g in grids])))\n",
     "count"
@@ -189,32 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-- -- -- ... -- -- --]\n",
-      " [-- -- -- ... -- -- --]\n",
-      " [-- -- -- ... -- -- --]\n",
-      " ...\n",
-      " [-- -- -- ... -- -- --]\n",
-      " [-- -- -- ... -- -- --]\n",
-      " [-- -- -- ... -- -- --]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(grids[0]['z'][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,20 +125,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ee_collection_path = 'projects/bathymetry/assets/jarkusgrids' #?"
+    "# Make sure you create the image collection folder in google earth engine before running"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run(cmd, shell=False):\n",
+    "ee_collection_path = 'projects/deltares-rws/eo-bathymetry/jarkus'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run(cmd, shell=True):\n",
     "    # print(cmd)\n",
     "    subprocess.call(cmd,shell=shell)"
    ]
@@ -252,8 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for g in tqdm(grids):\n",
-    "    print(g['times'])"
+    "#for g in tqdm(grids):\n",
+    "#    print(g['times'])"
    ]
   },
   {
@@ -264,8 +170,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "start_index = 0\n",
     "dirbathy = r'../../output_jarkusgrids/'\n",
     "j = 0\n",
@@ -289,7 +193,7 @@
     "            i = i + 1\n",
     "            continue\n",
     "        j += 1\n",
-    "        filename = 'jarkusgrids_' + str(str(t)[:4]) + '_' + str(j).rjust(3, '0')\n",
+    "        filename = 'jarkusgrids_' + str(str(t)[:4]) + '_' + str(j).rjust(4, '0')\n",
     "        filepath = dirbathy  + filename\n",
     "        filepath_asc = filepath + '.asc'\n",
     "        filepath_tif = filepath + '.tif'\n",
@@ -322,14 +226,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nodata_value = -32767"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# merge per year\n",
-    "uts = list(dict.fromkeys(ts)) # unique times\n",
-    "uyears = [int(str(tt)[:4]) for tt in uts] # unique years\n",
+    "tzinfo = ts[0].tzinfo\n",
+    "uyears = list(dict.fromkeys(map(lambda x: x.year, ts))) # unique years\n",
+    "uts = list(map(lambda x: datetime.datetime(year=x, month=1, day=1).replace(tzinfo=tzinfo), uyears)) # unique times\n",
     "\n",
-    "for ii, tt in enumerate(uyears):\n",
+    "for ii, tt in tqdm(enumerate(uyears)):\n",
     "    filename = 'jarkusgrids_' + str(str(tt)[:4])\n",
     "    filepath = dirbathy + filename\n",
-    "    filepath_tif = [dirbathy+ll for ll in os.listdir(dirbathy) if str(tt) in ll and ll.endswith('.tif')]\n",
+    "    filepath_tif = [dirbathy+ll for ll in os.listdir(dirbathy) if str(tt) in ll.split('_')[1] and ll.endswith('.tif')]\n",
     "    filepath_year_tif = filepath + '.tif'\n",
     "    \n",
     "    # per year\n",
@@ -424,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
