--- a/notebooks/Vaklodingen2EE.ipynb
+++ b/notebooks/Vaklodingen2EE.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#%matplotlib inline\n",
     "\n",
+    "import os\n",
     "import subprocess\n",
     "import itertools\n",
     "import numpy as np\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,45 +47,28 @@
     "    items = ncfile.split('/catalog.html/')\n",
     "    filename = items[1].split('/')[-1]\n",
     "    url = url_base + '/' + filename\n",
+    "    if filename == 'catalog.nc':\n",
+    "        continue\n",
     "    urls.append(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/vaklodingen_new/catalog.nc'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "url\n"
+    "urls[:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 153/153 [09:18<00:00,  3.65s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grids = []\n",
-    "for url in tqdm(urls[:-1]):\n",
+    "for url in tqdm(urls[:]):\n",
     "    ds = netCDF4.Dataset(url)\n",
     "    times = netCDF4.num2date(ds.variables['time'][:], ds.variables['time'].units, calendar='julian')\n",
     "    local = pytz.timezone(\"Europe/Amsterdam\")\n",
@@ -107,20 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2930"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "count = len(list(itertools.chain.from_iterable([g['times'] for g in grids])))\n",
     "count"
@@ -128,32 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-- -- -- ... -- -- --]\n",
-      " [-- -- -- ... -- -- --]\n",
-      " [-- -- -- ... -- -- --]\n",
-      " ...\n",
-      " [-- -- -- ... -- -- --]\n",
-      " [-- -- -- ... -- -- --]\n",
-      " [-- -- -- ... -- -- --]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(grids[0]['z'][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,20 +126,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ee_collection_path = 'projects/deltares-rws/eo-bathymetry/vaklodingen' #?"
+    "#ee_collection_path = 'projects/bathymetry/assets/vaklodingen'\n",
+    "ee_collection_path = 'projects/deltares-rws/eo-bathymetry/vaklodingen'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run(cmd, shell=False):\n",
+    "def run(cmd, shell=True):\n",
     "    # print(cmd)\n",
     "    subprocess.call(cmd,shell=shell)"
    ]
@@ -193,38 +153,35 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "start_index = 0\n",
-    "jj=0\n",
-    "dirbathy = r'../output/'\n",
+    "j = 0\n",
+    "dirbathy = r'../../output_vaklodingen/'\n",
+    "ts = []\n",
     "if not os.path.exists(dirbathy):\n",
     "    os.makedirs(dirbathy)\n",
     "for g in tqdm(grids):\n",
     "    ncols = len(g['x'])\n",
     "    nrows = len(g['y'])\n",
     "    cellsize = g['x'][1] - g['x'][0]\n",
-    "    # WARNING! 10m hardcoded! [mahbub]\n",
+    "    # taking corners\n",
     "    xllcorner = np.min(g['x']-10)\n",
     "    yllcorner = np.min(g['y']-10)\n",
     "    nodata_value = -32767\n",
     "    z = g['z']\n",
-    "    print(z.shape)\n",
+    "    #print(z.shape)\n",
     "\n",
     "    for i, t in enumerate(g['times']):\n",
+    "        ts.append(t)\n",
     "        if i < start_index:\n",
     "            i = i + 1\n",
     "            continue\n",
-    "\n",
-    "        jj = jj+1\n",
+    "        j += 1\n",
     "        #print('counter', jj)\n",
-    "\n",
-    "        filename = 'bathymetry_' + str(str(t)[:4]) +\"_\"+str(jj).rjust(4, '0')\n",
+    "        filename = 'vaklodingen_' + str(str(t)[:4]) + '_' + str(j).rjust(4, '0')\n",
     "#         print(filename)\n",
     "        filepath = dirbathy  + filename\n",
     "        filepath_asc = filepath + '.asc'\n",
     "        filepath_tif = filepath + '.tif'\n",
-    "        filename_tif = filename + '.tif'\n",
     "\n",
     "        zi = z[i]\n",
     "\n",
@@ -240,31 +197,66 @@
     "                f.write(s)\n",
     "                f.write('\\n')\n",
     "\n",
-    "        cmd = 'gdal_translate -ot Float32 -a_srs EPSG:28992 -co COMPRESS=DEFLATE -co PREDICTOR=2 -co ZLEVEL=6 -of GTiff {0} {1}'\\\n",
+    "                \n",
+    "        cmd = 'gdal_translate -ot Float32 -a_srs EPSG:28992 -of COG {0} {1}'\\\n",
     "            .format(filepath_asc, filepath_tif)\n",
-    "        run(cmd)\n",
+    "        run(cmd)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodata_value = -32767"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge per year\n",
+    "tzinfo = ts[0].tzinfo\n",
+    "uyears = list(dict.fromkeys(map(lambda x: x.year, ts))) # unique years\n",
+    "uts = list(map(lambda x: datetime.datetime(year=x, month=1, day=1).replace(tzinfo=tzinfo), uyears)) # unique times\n",
     "\n",
-    "        filepath_gs = 'gs://eo-bathymetry-rws/vaklodingen/' + filename_tif  # ?\n",
+    "for ii, tt in tqdm(enumerate(uyears)):\n",
+    "    filename = 'vaklodingen_' + str(str(tt)[:4])\n",
+    "    filepath = dirbathy + filename\n",
+    "    filepath_tif = [dirbathy+ll for ll in os.listdir(dirbathy) if str(tt) in ll.split('_')[1] and ll.endswith('.tif')]\n",
+    "    filepath_year_tif = filepath + '.tif'\n",
+    "    \n",
+    "    # per year\n",
+    "    files_to_mosaic = filepath_tif \n",
+    "    g = gdal.Warp(filepath_year_tif, files_to_mosaic, dstSRS='EPSG:28992', \n",
+    "                  outputType=gdal.GDT_Float32, format=\"COG\",\n",
+    "                  options=[\"COMPRESS=LZW\", \"TILED=YES\"])\n",
+    "    g = None \n",
+    "    \n",
+    "    filepath_gs = 'gs://eo-bathymetry-rws/vaklodingen/' + filename  # temporary file system in storage bucket\n",
+    "    #print(filepath_gs)\n",
+    "    cmd = 'gsutil cp {0} {1}' \\\n",
+    "        .format(filepath_year_tif, filepath_gs)\n",
+    "    run(cmd, shell=True)\n",
     "\n",
-    "        cmd = 'gsutil cp {0} {1}' \\\n",
-    "            .format(filepath_tif, filepath_gs)\n",
-    "        run(cmd, shell=True)\n",
+    "    filepath_ee = ee_collection_path + '/' + filename\n",
+    "    #print(filepath_ee)\n",
+    "    cmd = 'earthengine upload image --wait --asset_id={0} --nodata_value={1} {2}' \\\n",
+    "        .format(filepath_ee, nodata_value, filepath_gs)\n",
+    "    run(cmd, shell=True)\n",
     "\n",
-    "        filepath_ee = ee_collection_path + '/' + filename\n",
-    "        cmd = 'earthengine upload image --wait --asset_id={0} --nodata_value={1} {2}' \\\n",
-    "            .format(filepath_ee, nodata_value, filepath_gs)\n",
-    "        run(cmd, shell=True)\n",
+    "    time_start = int(uts[ii].timestamp() * 1000)\n",
+    "    cmd = 'earthengine asset set --time_start {0} {1}' \\\n",
+    "        .format(time_start, filepath_ee)\n",
+    "    run(cmd, shell=True)\n",
     "\n",
-    "        time_start = int(grids[0]['times'][0].timestamp() * 1000)\n",
-    "        cmd = 'earthengine asset set --time_start {0} {1}' \\\n",
-    "            .format(time_start, filepath_ee)\n",
-    "        run(cmd, shell=True)\n",
-    "\n",
-    "        cmd = 'earthengine acl set public {0}' \\\n",
-    "            .format(filepath_ee)\n",
-    "        run(cmd, shell=True)\n",
-    "\n",
-    "        i = i + 1\n"
+    "    cmd = 'earthengine acl set public {0}' \\\n",
+    "        .format(filepath_ee)\n",
+    "    run(cmd, shell=True)\n",
+    "\n"
    ]
   },
   {
@@ -323,7 +315,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -337,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
