keep catalog out from list

--- a/notebooks/maasvlakte2EE.ipynb
+++ b/notebooks/maasvlakte2EE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,23 +45,46 @@
     "    items = ncfile.split('/catalog.html/')\n",
     "    filename = items[1].split('/')[-1]\n",
     "    url = url_base + '/' + filename\n",
+    "    if filename == 'catalog.html':\n",
+    "        continue\n",
     "    urls.append(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/maasvlakte/maasvlakteKB116_3938.nc',\n",
+       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/maasvlakte/maasvlakteKB116_4140.nc',\n",
+       " 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/maasvlakte/maasvlakteKB117_3938.nc']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "urls[:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████| 3/3 [00:08<00:00,  2.79s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "grids = []\n",
     "for url in tqdm(urls[:]):\n",
@@ -87,9 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "count = len(list(itertools.chain.from_iterable([g['times'] for g in grids])))\n",
     "count"
@@ -97,18 +131,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-- -- -- ... -- -- --]\n",
+      " [-- -- -- ... -- -- --]\n",
+      " [-- -- -- ... -- -- --]\n",
+      " ...\n",
+      " [-- -- -- ... -- -- --]\n",
+      " [-- -- -- ... -- -- --]\n",
+      " [-- -- -- ... -- -- --]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(grids[0]['z'][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,9 +190,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████| 3/3 [00:00<00:00, 3024.01it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[datetime.datetime(2013, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2014, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2015, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2016, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2017, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2018, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2019, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2021, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2022, 1, 1, 0, 0, tzinfo=<UTC>)]\n",
+      "[datetime.datetime(2013, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2014, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2015, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2016, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2017, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2018, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2019, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2021, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2022, 1, 1, 0, 0, tzinfo=<UTC>)]\n",
+      "[datetime.datetime(2013, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2014, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2015, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2016, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2017, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2018, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2019, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2021, 1, 1, 0, 0, tzinfo=<UTC>), datetime.datetime(2022, 1, 1, 0, 0, tzinfo=<UTC>)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for g in tqdm(grids):\n",
     "    print(g['times'])"
@@ -152,11 +226,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████| 3/3 [00:30<00:00, 10.31s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -212,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
