new file for single year update

--- a/notebooks/Vaklodingen2EE_SingleYearUpdate.ipynb
+++ b/notebooks/Vaklodingen2EE_SingleYearUpdate.ipynb
@@ -33,7 +33,7 @@
     "url_base = 'http://opendap.deltares.nl/thredds/dodsC/opendap/rijkswaterstaat/vaklodingen_new'\n",
     "ext = 'nc'\n",
     "urls = []\n",
-    "\n",
+    "yearupdate = 2022 # change year for update\n",
     "\n",
     "def listFD(url, ext=''):\n",
     "    page = requests.get(url).text\n",
@@ -70,11 +70,16 @@
     "for url in tqdm(urls[:]):\n",
     "    ds = netCDF4.Dataset(url)\n",
     "    times = netCDF4.num2date(ds.variables['time'][:], ds.variables['time'].units, calendar='julian')\n",
+    "    idbooltime = [1 if t.year == yearupdate else 0 for t in times ]\n",
+    "    idtime = np.where(idbooltime)[0]\n",
     "    local = pytz.timezone(\"Europe/Amsterdam\")\n",
-    "    # times = [local.localize(t, is_dst=None).astimezone(pytz.utc) for t in times]\n",
-    "    times = [datetime.datetime.strptime(t.isoformat(), \"%Y-%m-%dT%H:%M:%S\").replace(tzinfo=pytz.utc) for t in times]\n",
+    "    times = [datetime.datetime.strptime(t.isoformat(), \"%Y-%m-%dT%H:%M:%S\").replace(tzinfo=pytz.utc) \n",
+    "                 for t in times if t.year == yearupdate]\n",
+    "    if len(times) == 0:\n",
+    "        continue\n",
+    "    \n",
     "    arrs = []\n",
-    "    z = ds.variables['z'][:]\n",
+    "    z = ds.variables['z'][idtime,:,:]\n",
     "    x = ds.variables['x'][:]\n",
     "    y = ds.variables['y'][:]\n",
     "\n",
@@ -129,13 +134,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ee_collection_path = 'projects/bathymetry/assets/vaklodingen'\n",
+    "# Make sure you create the image collection folder in google earth engine before running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ee_collection_path = 'projects/deltares-rws/eo-bathymetry/vaklodingen'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,14 +160,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for g in tqdm(grids):\n",
+    "#    print(g['times'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████| 72/72 [02:37<00:00,  2.19s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "start_index = 0\n",
-    "j = 0\n",
     "dirbathy = r'../../output_vaklodingen/'\n",
+    "j = 0\n",
     "ts = []\n",
     "if not os.path.exists(dirbathy):\n",
     "    os.makedirs(dirbathy)\n",
@@ -175,9 +206,8 @@
     "            i = i + 1\n",
     "            continue\n",
     "        j += 1\n",
-    "        #print('counter', jj)\n",
+    "        \n",
     "        filename = 'vaklodingen_' + str(str(t)[:4]) + '_' + str(j).rjust(4, '0')\n",
-    "#         print(filename)\n",
     "        filepath = dirbathy  + filename\n",
     "        filepath_asc = filepath + '.asc'\n",
     "        filepath_tif = filepath + '.tif'\n",
@@ -196,7 +226,9 @@
     "                f.write(s)\n",
     "                f.write('\\n')\n",
     "\n",
-    "                \n",
+    "        #cmd = 'gdal_translate -ot Float32 -a_srs EPSG:28992 -co COMPRESS=DEFLATE -co PREDICTOR=2 -co ZLEVEL=6 -of GTiff {0} {1}'\\\n",
+    "        #    .format(filepath_asc, filepath_tif)\n",
+    "        # per tile\n",
     "        cmd = 'gdal_translate -ot Float32 -a_srs EPSG:28992 -of COG {0} {1}'\\\n",
     "            .format(filepath_asc, filepath_tif)\n",
     "        run(cmd)\n"
@@ -204,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,9 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [03:34, 214.61s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# merge per year\n",
     "tzinfo = ts[0].tzinfo\n",
@@ -254,16 +294,8 @@
     "\n",
     "    cmd = 'earthengine acl set public {0}' \\\n",
     "        .format(filepath_ee)\n",
-    "    run(cmd, shell=True)\n",
-    "\n"
+    "    run(cmd, shell=True)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -280,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "        filepath_gs = 'gs://eo-bathymetry-rws/vaklodingen/' + filename_tif\n",
+    "        filepath_gs = 'gs://eo-bathymetry-rws/jarkus/' + filename_tif\n",
     "        \n",
     "        #gsutil = 'D:/src/google-cloud-sdk/bin/gsutil.cmd' # relative path is not defined on Windows\n",
     "        gsutil = 'gsutil'\n",
