--- a/notebooks/Vaklodingen2EE.ipynb
+++ b/notebooks/Vaklodingen2EE.ipynb
@@ -16,11 +16,22 @@
     "import pytz\n",
     "import datetime\n",
     "import netCDF4\n",
+    "import ee\n",
     "from osgeo import gdal\n",
     "from os import path\n",
     "from osgeo.gdalconst import *\n",
     "from tqdm import tqdm\n",
-    "from bs4 import BeautifulSoup\n"
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Authenticate with project eo-bathymetry\n",
+    "ee.Authenticate()"
    ]
   },
   {
@@ -314,9 +325,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "geo-env",
    "language": "python",
-   "name": "python3"
+   "name": "geo-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -328,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
